--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,10 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Milano Vice Partnerhub" />
-    <meta property="og:description" content="Milano Vice Partnerhub" />
+    <meta
+      property="og:description"
+      content="Das “Milano Vice Partnerhub” ist eine Plattform für die Partner von Milano Vice, dem flyesten Anbieter für Pizza-Delivery. Hier finden Sie aktuelle News, Abrechnungen, Bestellungen und Analysen zu Ihrem Geschäft mit Milano Vice. Melden Sie sich an und profitieren Sie von den Vorteilen des Partnerhubs."
+    />
     <meta property="og:image" content="/assets/images/logo/mv-og-image.png" />
 
     <!-- Twitter Meta Tags -->
@@ -38,7 +41,10 @@
       content="https://milano-vice-partnerhub.up.railway.app/"
     />
     <meta name="twitter:title" content="Milano Vice Partnerhub" />
-    <meta name="twitter:description" content="Milano Vice Partnerhub" />
+    <meta
+      name="twitter:description"
+      content="Das “Milano Vice Partnerhub” ist eine Plattform für die Partner von Milano Vice, dem flyesten Anbieter für Pizza-Delivery. Hier finden Sie aktuelle News, Abrechnungen, Bestellungen und Analysen zu Ihrem Geschäft mit Milano Vice. Melden Sie sich an und profitieren Sie von den Vorteilen des Partnerhubs."
+    />
     <meta name="twitter:image" content="/assets/images/logo/mv-og-image.png" />
   </head>
   <body>
